--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -55,7 +55,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a:not(.image) {
-  color: darkblue;
+  color: #00008b;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -92,7 +92,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: darkblue;
+  border-color: #00008b;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
 }
 
@@ -101,22 +101,22 @@ body {
  *********************************************/
 .reveal .controls div.navigate-left,
 .reveal .controls div.navigate-left.enabled {
-  border-right-color: darkblue;
+  border-right-color: #00008b;
 }
 
 .reveal .controls div.navigate-right,
 .reveal .controls div.navigate-right.enabled {
-  border-left-color: darkblue;
+  border-left-color: #00008b;
 }
 
 .reveal .controls div.navigate-up,
 .reveal .controls div.navigate-up.enabled {
-  border-bottom-color: darkblue;
+  border-bottom-color: #00008b;
 }
 
 .reveal .controls div.navigate-down,
 .reveal .controls div.navigate-down.enabled {
-  border-top-color: darkblue;
+  border-top-color: #00008b;
 }
 
 .reveal .controls div.navigate-left.enabled:hover {
@@ -143,7 +143,7 @@ body {
 }
 
 .reveal .progress span {
-  background: darkblue;
+  background: #00008b;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
