--- a/css/theme/source/uulm.scss
+++ b/css/theme/source/uulm.scss
@@ -57,6 +57,11 @@ $selectionBackgroundColor: #134674;
   line-height: 36px;
   text-shadow: 0 1px 1px rgba(0,0,0,0.1);
 
+  .slides section {
+    height: 675px;
+    width: 900px;
+  }
+
   section img {
     border: 0;
     box-shadow: none;
