--- a/css/theme/uulm.css
+++ b/css/theme/uulm.css
@@ -15,6 +15,7 @@ body {
   background: -o-radial-gradient(center, circle cover, #f0f0f0 0%, #bebebe 100%);
   background: -ms-radial-gradient(center, circle cover, #f0f0f0 0%, #bebebe 100%);
   background: radial-gradient(center, circle cover, #f0f0f0 0%, #bebebe 100%);
+  background-color: #2b2b2b;
 }
 
 .reveal {
@@ -70,7 +71,6 @@ body {
   color: #74a7cb;
   text-shadow: none;
   border: none;
-  border-radius: 2px;
 }
 
 .reveal .roll span:after {
@@ -82,7 +82,7 @@ body {
  * IMAGES
  *********************************************/
 .reveal section img {
-  margin: 15px;
+  margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #666666;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
@@ -102,39 +102,39 @@ body {
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
-.reveal .controls div.left,
-.reveal .controls div.left.enabled {
+.reveal .controls div.navigate-left,
+.reveal .controls div.navigate-left.enabled {
   border-right-color: #3b759e;
 }
 
-.reveal .controls div.right,
-.reveal .controls div.right.enabled {
+.reveal .controls div.navigate-right,
+.reveal .controls div.navigate-right.enabled {
   border-left-color: #3b759e;
 }
 
-.reveal .controls div.up,
-.reveal .controls div.up.enabled {
+.reveal .controls div.navigate-up,
+.reveal .controls div.navigate-up.enabled {
   border-bottom-color: #3b759e;
 }
 
-.reveal .controls div.down,
-.reveal .controls div.down.enabled {
+.reveal .controls div.navigate-down,
+.reveal .controls div.navigate-down.enabled {
   border-top-color: #3b759e;
 }
 
-.reveal .controls div.left.enabled:hover {
+.reveal .controls div.navigate-left.enabled:hover {
   border-right-color: #74a7cb;
 }
 
-.reveal .controls div.right.enabled:hover {
+.reveal .controls div.navigate-right.enabled:hover {
   border-left-color: #74a7cb;
 }
 
-.reveal .controls div.up.enabled:hover {
+.reveal .controls div.navigate-up.enabled:hover {
   border-bottom-color: #74a7cb;
 }
 
-.reveal .controls div.down.enabled:hover {
+.reveal .controls div.navigate-down.enabled:hover {
   border-top-color: #74a7cb;
 }
 
@@ -158,6 +158,10 @@ body {
   letter-spacing: -1px;
   line-height: 36px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+.reveal .slides section {
+  height: 675px;
+  width: 900px;
 }
 .reveal section img {
   border: 0;
