--- a/css/theme/source/cccs.scss
+++ b/css/theme/source/cccs.scss
@@ -1,5 +1,5 @@
 /**
- * UUlm theme for reveal.js.
+ * CCCS theme for reveal.js.
  *
  */
 
@@ -12,21 +12,22 @@
 
 // Include theme-specific fonts
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+@import url('http://fonts.googleapis.com/css?family=Titillium+Web:200');
 
-$highlightColor: #a32638;
+$highlightColor: #5bc72b;
 
 // Override theme settings (see ../template/settings.scss)
 $mainFont: 'Open Sans', sans-serif;
 $mainFontSize: 30px;
 $mainColor: #666666;
-$headingFont: 'Open Sans', sans-serif;
+$headingFont: 'Titillium Web', sans-serif;
 $headingColor: $highlightColor;
 $headingLineHeight: 36px;
 $headingLetterSpacing: -1px;
 $headingTextTransform: none;
 $headingTextShadow: 0 1px 1px rgba(0,0,0,0.1);
 $heading1TextShadow: 0 1px 1px rgba(0,0,0,0.1);
-$linkColor: #3b759e;
+$linkColor: #061e35;
 $linkColorHover: lighten( $linkColor, 20% );
 $selectionBackgroundColor: #134674;
 
